# home

./: .gitignore  .gitmodules  JJCHSITPMI-V2-Unified.py  MaterialManager-4.py  PAUT_Procedure_Draft-1.md  PAUT_Procedure_Mobile.html  SIT-PMI-K3-1_Unified_20260308_144638.xlsm  SIT-PMI-K3-1_Unified_20260309_211135.xlsm  SIT-PMI-K3.xlsm  app_config.json  build_log.txt  build_standalone.bat  check_enc.py  cleanup_worker_names.py  count_sites.py  deactivate_paut.py  diagnose_site_summary.py  error_log.txt  fix_buttons.py  header_check.txt  install_dependencies.bat  material_manager.spec  photo_log_settings.json  photo_log_ui.py  project_budget_analysis.py  reactivate_paut.py  reduce_space.py  report_manager.spec  report_tab.txt  reproduce_iso_issue.py  temp_check_merged.py  temp_drag.py  temp_grep.txt  temp_inspect_xls.py  temp_inspect_xls_refined.py  temp_inspect_xlsx.py  test_consumable.py  verify_interleaved_sort.py  배포.ps1  실행하기.bat  (+1 more)
Na-aba/home/: check_cols.py  cleanup_inventory.py  find_status.py  fix_format.py  fix_stretch.py  list_tables.py  mapping.txt  mapping_xlsx.txt  merged_info.txt  peek_paut.py  peek_paut_excel.py  peek_paut_excel_refined.py  photo_log_settings.json  photo_log_ui.py  pyproject.toml  remove_paut.py  remove_scroll.py  requirements.txt  scratch.py  search_ui.py  splitscreen_fix.py  splitscreen_pmi.py  test.xlsx
Na-aba/home/archive/: Material-Master-Manager-Backup.py  Material-Master-Manager-V1.py  Material-Master-Manager-V11.py  Material-Master-Manager-V12.py  Material-Master-Manager-V3.py  Material-Master-Manager-V5.py  PMI-Report-Generator-V3.py  (+6 more)
(+462 files in other folders)
